# tint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: dragon.mtl
assets/shaders/: bvh.glsl  camera.glsl  data.glsl  illum.glsl  intersection.glsl  main.glsl  rng.glsl  sampler.glsl  screen_frag.glsl  triangle.glsl
include/: OBJ_Loader.h
src/: main.cpp  tint.hpp
src/camera/: camera.cpp  camera.hpp  ray.hpp
src/intersection/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  object.cpp  object.hpp  ray.hpp  triangle.cpp  triangle.hpp
src/material/: material.cpp  material.hpp
src/opencl/: bvh.cl  camera.cl  intersection.cl  random.cl  ray.cl  triangle.cl
src/resources/: image.cpp  image.hpp  mesh.cpp  mesh.hpp  resources.cpp  resources.hpp
src/sampler/: random.hpp
src/scene/: camera.cpp  camera.hpp  frame.cpp  frame.hpp  material.cpp  material.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp
src/utils/: buffer.cpp  buffer.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
